[tool.poetry]
name = "payload2csv"
version = "0.1.0"
description = "Convert an STM32CubeMonitor msg.payload file into a .csv file."
authors = ["Connor Novak <connor@trilo.bio>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
plac = "^1.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
